<resources>
    <string name="app_name">FinalProject</string>

    <string name="topic_name">HỖ TRỢ CHẨN ĐOÁN CHẤN THƯƠNG SỌ NÃO </string>
    <string name="topic_name_next">SỬ DỤNG TRÍ TUỆ NHÂN TẠO</string>
    <string name="ten_dang_nhap">Tên đăng nhập</string>
    <string name="mat_khau">Mật Khẩu</string>
    <string name="dang_nhap">Đăng Nhập</string>
    <string name="todo">TODO</string>
    <string name="docter_name">Tên Bác Sỹ</string>
    <string name="patient_id">Mã/Tên bệnh nhân</string>
    <string name="patient_name">Tên bệnh nhân</string>
    <string name="search">Tìm kiếm</string>
    <string name="stt">STT</string>
    <string name="status">Trạng Thái</string>
    <string name="add_new_profile">Thêm mới hồ sơ</string>
    <string name="profile_list">Danh sách bản ghi</string>
    <string name="administrative_infor">Thông tin hành chính</string>
    <string name="id_patient">Mã bệnh nhân</string>
    <string name="treatment_department">Khoa/Phòng điều trị</string>
    <string name="hospital_admission_date">Ngày vào viện</string>
    <string name="hospital_admission_year">Năm vào viện</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="today">Hôm nay</string>
    <string name="_2024">2024</string>
    <string name="nguyen_van_a">NGUYEN VAN A</string>
    <string name="patient_sex">Giới tính</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="Age">Tuổi</string>
    <string name="address">Địa chỉ</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="medical_insurance_code">Mã bảo hiểm y tế</string>
    <string name="filer">Lọc</string>
    <string name="profile_status">Trạng thái hồ sơ</string>
    <string name="finish">Hoàn thành</string>
    <string name="un_finish">Chưa hoàn thành</string>
    <string name="from">Từ</string>
    <string name="to">Đến</string>
    <string name="bn1233456">BN1233456</string>
    <string name="save">Lưu</string>
    <string name="clinical_diagnosis">Chẩn đoán lân sàng</string>
    <string name="diagnostic_ct_imaging">Chẩn đoán hình ảnh CT</string>
    <string name="paraclinical_testing">Xét nghiệm cận lâm sàng</string>
    <string name="reason">Nguyên nhân</string>
    <string name="reason_for_hospitalization">Lý do vào viện</string>
    <string name="medical_history">Bệnh sử</string>
    <string name="clinical_symptoms">Triệu chứng lâm sàng</string>
    <string name="awake_after_falling">Tỉnh sau ngã</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="unclear">Không rõ</string>
    <string name="nausea">Buồn nôn, nôn</string>
    <string name="nerve_paralysis">Liệt các dây thần kinh sọ (12 đôi dây thần kinh sọ)</string>
    <string name="quadriplegia">Liệt tứ chi</string>
    <string name="epileptic">Động kinh</string>
    <string name="neck_stiff">Cứng gáy</string>
    <string name="damage_to_the_chest_and_abdomen">Tổn thương phối hợp ngực, bụng</string>
    <string name="rememberable">Nhớ sự việc sau ngã (không quên ngược chiều)</string>
    <string name="time_from_accident_to_hospital">Thời gian từ lúc tai nạn đến lúc nhập viện (tiếng)</string>
    <string name="time_from_hospital_to_surgery">Thời gian từ lúc nhập viện đến lúc phẫu thuật (tiếng)</string>
    <string name="form_of_transportation">Hình thức vận chuyển</string>
    <string name="emergency">Sơ cứu/Cấp cứu (Mô tả)</string>
    <string name="heartbeat">Mạch (lần/phút)</string>
    <string name="temperature">Nhiệt độ (℃)</string>
    <string name="blood_pressure">Huyết áp (mmHg)</string>
    <string name="spo2">SPO2</string>
    <string name="breathing_rate">Nhịp thở (lần/phút)</string>
    <string name="responsive_eyes">Đáp ứng mắt</string>
    <string name="respond_words">Đáp ứng lời nói</string>
    <string name="Responsive_movement">Đáp ứng vận động</string>
    <string name="glasgow">Glasgow</string>
    <string name="pupils">Đồng tử</string>
    <string name="Left_pupil_size">Kích thước đồng tử trái (mm)</string>
    <string name="Right_pupil_size">Kích thước đồng tử Phải (mm)</string>
    <string name="pupil_reflex_left">Phản xạ đồng tử với ánh sáng mắt trái</string>
    <string name="pupil_reflex_right">Phản xạ đồng tử với ánh sáng mắt phải</string>
    <string name="positive">Dương tính</string>
    <string name="negative">Âm tính</string>
    <string name="accompanying_diseases">Bệnh lý kèm theo</string>
    <string name="diabetes">Tiểu đường</string>
    <string name="hypertension">Tăng huyết áp</string>
    <string name="old_brain_stroke">Đột quỵ não cũ</string>
    <string name="Cardiovascular_disease">Bệnh lý tim mạch</string>
    <string name="chronic_illness">Bệnh mãn tính khác</string>
    <string name="data_entry_time">Thời gian nhập liệu</string>
    <string name="dd_mm_yyyy_hh_mm_ss">dd/mm/yyyy hh:mm:ss</string>
    <string name="contrast_injection">Tiêm cản quang</string>
    <string name="no_contrast_injection">Không tiêm cản quang</string>
    <string name="reset">Đặt lại</string>
    <string name="brain_parenchyma">Nhu mô não</string>
    <string name="epidural_hematoma">Máu tụ ngoài màng cứng</string>
    <string name="subdural_hematoma">Máu tụ dưới màng cứng</string>
    <string name="Cerebral_hemorrhage">Dập não xuất huyết</string>
    <string name="Hematoma_in_the_brain">Máu tụ trong não</string>
    <string name="subarachnoid_bleeding">Xuất huyết dưới nhện</string>
    <string name="Intracranial_air_collection">Tụ khí nội sọ</string>
    <string name="Midline_shift">Di lệch đường giữa</string>
    <string name="Change_bottom_tank">Thay đổi bể đáy</string>
    <string name="ventricular_system_changes">Thay đổi hệ thống não thất</string>
    <string name="Brain_herniation">Thoát Vị Não</string>
    <string name="Cerebral_dema">Phù não</string>
    <string name="Cerebrovascular_malformations">Dị dạng mạch máu não</string>
    <string name="skull">Xương sọ</string>
    <string name="skull_dome_broke">Vỡ xương vòm sọ</string>
    <string name="skull_base_broke">Vỡ xương nền sọ</string>
    <string name="not_broke_skull">Không vỡ xương</string>
    <string name="brain_injury_risk">Nguy cơ vết thương sọ não</string>
    <string name="rotterdam_point">Điểm Rotterdam</string>
    <string name="_0to6">0-6</string>
    <string name="Blood_formula">Công thức máu</string>
    <string name="erythrocyte">Hồng cầu</string>
    <string name="_10_12_l">10^12/L</string>
    <string name="gtbt_4_2_5_4_10_12_l">GTBT: 4.2-5.4(x10^12/L)</string>
    <string name="White_blood">Bạch cầu</string>
    <string name="_10_9_l">10^9/L</string>
    <string name="_4_10_x10_9_l">GTBT: 4-10(x10^9/L)</string>
    <string name="platelets">Tiểu cầu</string>
    <string name="gtbt_150_450_x10_9_l">GTBT: 150-450(x10^9/L)</string>
    <string name="g_l">g/L</string>
    <string name="_130_160_g_l">130-160(g/L)</string>
    <string name="Hemoglobin">Huyết sắc tố</string>
    <string name="Blood_chemistry">Sinh hóa máu</string>
    <string name="dinh_luong_ethanol">Định lượng Ethanol</string>
    <string name="mg_dl">mg/dL</string>
    <string name="got">GOT</string>
    <string name="_0_40_u_l">0-40(U/L)</string>
    <string name="u_l">U/L</string>
    <string name="alb">ALB</string>
    <string name="gtbt_35_52_g_l">GTBT: 35-52(g/L)</string>
    <string name="protein">Protein</string>
    <string name="gtbt_66_83_g_l">GTBT: 66-83(g/L)</string>
    <string name="gan">Gan</string>
    <string name="Kidney">Thận</string>
    <string name="mmol_l">mmol/L</string>
    <string name="gtbt_2_8_7_2_mmol_l">GTBT: 2.8-7.2(mmol/L)</string>
    <string name="cretinin">Cretinin</string>
    <string name="umol_l">umol/L</string>
    <string name="gtbt_59_104_umol_l">GTBT: 59/104(umol/L)</string>
    <string name="Blood_clotting">Đông máu</string>
    <string name="aptt">APTT</string>
    <string name="pt">PT</string>
    <string name="percent">%</string>
    <string name="s">S</string>
    <string name="gtbt_80_160">GTBT: 80-160(%)</string>
    <string name="ecg">Điện tim</string>
    <string name="normal">Bình thường</string>
    <string name="unnormal">Bất thường</string>
    <string name="Electrolyte">Điện giải</string>
    <string name="na">Na+</string>
    <string name="k">K+</string>
    <string name="cl">Cl-</string>
    <string name="gtbt_3_5_5_0_mmol_l">GTBT: 3.5-5.0(mmol/L)</string>
    <string name="gtbt_98_106_mmol_l">GTBT: 98-106(mmol/L)</string>
    <string name="tr_c"><![CDATA[<< Trước]]></string>
    <string name="sau"><![CDATA[Sau>>]]></string>
    <string name="_cach">||</string>
    <string name="_001">001</string>
    <string name="t_n_tr_ng">Tên trường</string>
    <string name="not_given">Không rõ</string>
    <string name="title">title</string>

</resources>