<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="8dp"
        >
        <TextView
            android:id="@+id/tv_name_field"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/t_n_tr_ng"
            android:textSize="16sp"
            android:layout_marginHorizontal="8dp"
            />
        <RadioGroup
            android:id="@+id/radio_group_three_choice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="horizontal"
            >
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textSize="16sp"
                android:layout_weight="1"
                />
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textSize="16sp"
                android:layout_weight="1"
                />
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/not_given"
                android:textSize="16sp"
                android:layout_weight="1"
                />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_reset"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:layout_marginHorizontal="8dp"
            android:gravity="center"
            />

    </LinearLayout>


</androidx.cardview.widget.CardView>