<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".doctor.medical_records_screen.MedicalRecordsScreen">


    <ImageView
        android:id="@+id/footer"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:src="@drawable/gray_brain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/lg_dhbkhn"
            android:layout_weight="1"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/lg_seee"
            android:layout_weight="2"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/lg_bv"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/log_out_frame"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"        >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="3dp"
            android:src="@drawable/icon_user" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/docter_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/vector_line" />

        <ImageView
            android:id="@+id/imvSignOut"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="3dp"
            android:src="@drawable/icon_logout" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="130dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="60dp"
        >

        <LinearLayout
            android:id="@+id/lLSlider"
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_boder_red"
            android:orientation="vertical"
            android:elevation="4dp"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/profile_list"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPatientInfor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_boder_red"
            android:elevation="4dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvDiagnosisName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clinical_diagnosis"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="5dp"
                app:drawableEndCompat="@drawable/expand_icon"
                android:layout_marginHorizontal="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_medical_record_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="4dp"
                />
        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_chan_doan_lam_sang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/red"
            app:cardElevation="5dp"
            >
            <TextView
                android:id="@+id/tv_title1"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clinical_diagnosis"
                android:textSize="18sp"
                android:textColor="@color/white"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_chan_doan_hinh_anh_ct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="5dp"
            >
            <TextView
                android:id="@+id/tv_title2"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diagnostic_ct_imaging"
                android:textSize="18sp"
                android:textColor="@color/black"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_xet_nghiem_can_lam_sang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="5dp"
            >
            <TextView
                android:id="@+id/tv_title3"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paraclinical_testing"
                android:textSize="18sp"
                android:textColor="@color/black"
                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>